# stingray

./: .gitignore  README.md  pyproject.toml  setup.py
src/stingray/: __init__.py  main.py
