[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
artifacts = [
  "*.so",
  "*.pyd"
]

[project]
name = "stingray"
version = "0.1"
authors = [
    { name = "Satrio Wibowo", email = "satrio.biology@yahoo.com" }
]
readme = "README.md"
requires-python = ">=3.8"
description = "CLI for S3 data transfer"
keywords = []
dependencies = []
